<!--
  ~ Copyright (c) 2019 FishWaffle.
  -->

<resources>
    <string name="app_name">NatureRemoTaskerPlugin</string>

    <string name="loading">読み込み中</string>
    <string name="token">AccessToken</string>
    <string name="tokenHint">xxxxxxxxxxxxxx</string>
    <string name="generateToken">GenerateToken</string>
    <string name="Save">保存</string>
    <string name="PreferenceSave">保存しました。</string>
    <string name="Power">電源</string>
    <string name="Modes">モード</string>
    <string name="Temp">温度</string>
    <string name="Vol">風量</string>
    <string name="Dir">風向き</string>
    <string name="SendSuccess">送信成功</string>
    <string name="SendError">送信失敗</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TvPresetButtonList">TVプリセットボタン一覧</string>
    <string name="SignalButtonList">赤外線ボタン一覧</string>
</resources>
